# creusot_test

./: .gitignore  Cargo.toml  rustc-ice-2025-06-02T12_52_53-84580.txt  why3find.json
src/: lib.rs
src/smol_currency/: base_currency.rs  mod.rs  quote_currency.rs
verif/creusot_test_rlib/creusot_test/: M_add_one.coma  M_max.coma  M_min.coma
verif/creusot_test_rlib/creusot_test/M_add_one/: proof.json
verif/creusot_test_rlib/creusot_test/M_max/: proof.json
verif/creusot_test_rlib/creusot_test/M_min/: proof.json
